Tournaments functionality extended with lobby